# pyrunner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _build_local.py  pyproject.toml
.github/workflows/: release.yml
examples/: example.ipynb  example.py  marimo_example.py  marimo_example_run.py
macos/: Info.plist  icon.icns  launch  launch.c  launch.sh
tests/: test_macos_launcher.py  test_windows_launcher.py
windows/: go.mod  launcher.go
windows/winres/: winres.json
